# on1giri_server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  backend.Dockerfile  migrations.sh  test.http  wait_for_db.sh
migrations/2024-04-07-144510_global/: down.sql  up.sql
setup/: users.sql
src/: lib.rs  main.rs  routes.rs  schema.rs  server.rs  setup.rs  types.rs
src/auth/: mod.rs
src/auth/routes/: login.rs  logout.rs  mod.rs  register.rs
src/channels/: mod.rs  types.rs
src/channels/routes/: channels.rs  get.rs  members.rs  messages.rs  mod.rs
src/channels/types/: mod.rs
src/gateway/: get.rs  mod.rs
src/gateway/types/: mod.rs
src/guilds/: mod.rs  types.rs
src/guilds/routes/: channels.rs  get.rs  guilds.rs  members.rs  mod.rs  permissions.rs  post.rs  roles.rs
src/login/: mod.rs  types.rs
src/login/routes/: mod.rs  post.rs
src/members/: mod.rs  routes.rs  types.rs
src/messages/: mod.rs
src/messages/routes/: get.rs  mod.rs  post.rs
src/messages/types/: mod.rs
src/roles/: mod.rs  types.rs
src/roles/types/: mod.rs
src/types/: access_level.rs  channel_permissions.rs  channels.rs  color.rs  database.rs  guilds.rs  login.rs  member_roles.rs  members.rs  messages.rs  mod.rs  response.rs  roles.rs  roles_category.rs  user_metadata.rs  users.rs
src/users/: delete.rs  mod.rs  types.rs
src/users/routes/: delete.rs  get.rs  guilds.rs  mod.rs  patch.rs  post.rs  user_metadata.rs
src/users/schema/: mod.rs
src/users/types/: mod.rs
