[package]
name = "on1giri_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "*", features = ["chrono"]}
diesel-async = {version = "*", features = ["postgres", "deadpool"] }

serde = { version = "*", features = ["derive", "std"]}
tokio = {version = "*", features = ["full"]}
rocket = { version = "*", features = ["secrets", "json"] }
rocket_ws = "0.1.0"
dotenvy = "0.15"
chrono = { version = "*", features = ["serde"]}
base64 = "0.22.0"
ring = "0.17.8"
